--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>este mi primer commit</h1>
     <h3>Que estén muy bien</h3>
+    <p>para que sincronicen cambios</p>
 </body>
 </html>
