feat[index]:Prueba Majo

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>este mi primer commit</h1>
     <h3>Que estén muy bien</h3>
     <p>para que sincronicen cambios</p>
+    <p>Párrafo de prueba Majo</p>
 </body>
 </html>
