Feat[Index]:Prueva en index

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h3>Que estén muy bien</h3>
     <p>para que sincronicen cambios</p>
     <p>Párrafo de prueba Majo</p>
+    <p>Prueba Rosman</p>
 </body>
 </html>
