--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident a iste et, sint ut necessitatibus facere voluptatum, vitae totam neque doloremque exercitationem modi aliquam voluptas quis minima reiciendis sapiente velit.
-        </p>
-    </div>
+    <h1>este mi primer commit</h1>
+    <h3>Que estén muy bien</h3>
+    <p>para que sincronicen cambios</p>
+    <p>Párrafo de prueba Majo</p>
+    <p>Prueba Rosman</p>
 </body>
 </html>
