feat[index]: Primero commit

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <p>para que sincronicen cambios</p>
     <p>Párrafo de prueba Majo</p>
     <p>Prueba Rosman</p>
+
+    <p>espero</p>
 </body>
 </html>
