--- a/Reto N°3/Index.html
+++ b/Reto N°3/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CarpiShop</title>
+    <title>General Shop</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -16,11 +16,15 @@
             </header>
             <nav>
                 <ul>
-                    <li><button class="butto-category"><i class="bi bi-hand-index-thumb-fill"></i>Tendencias</button></li>
-                    <li><button class="butto-category"><i class="bi bi-hand-index-thumb"></i>Camisetas</button></li>
-                    <li><button class="butto-category"><i class="bi bi-hand-index-thumb"></i>Busos</button></li>
-                    <li><button class="butto-category"><i class="bi bi-hand-index-thumb"></i>Camidses</button></li>
-                    <li><a class="button-shoppingCar" href="./shoppingCar.html">
+                    <li><button class="button-menu butto-category active"><i class="bi bi-hand-index-thumb-fill"></i>Tendencias</button></li>
+
+                    <li><button class="button-menu butto-category"><i class="bi bi-hand-index-thumb"></i>Camisetas</button></li>
+
+                    <li><button class="button-menu butto-category"><i class="bi bi-hand-index-thumb"></i>Busos</button></li>
+
+                    <li><button class="button-menu butto-category"><i class="bi bi-hand-index-thumb"></i>Camidses</button></li>
+
+                    <li><a class="button-menu button-shoppingCar" href="./shoppingCar.html">
                         <i class="bi bi-cart-fill"></i>Carrito <span class="cutter">0</span></a></li>
                 </ul>
             </nav>
