Feat[ShoppingCar]:Creacion de carrito.

--- a/Reto N°3/shoppingCar.html
+++ b/Reto N°3/shoppingCar.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Carrito-General Shop</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <div class="container">
@@ -13,12 +15,16 @@
             </header>
             <nav>
                 <ul>
-                    <li><button class="butto-category"><i class="bi bi-hand-index-thumb-fill"></i>Tendencias</button></li>
-                    <li><button class="butto-category"><i class="bi bi-hand-index-thumb"></i>Camisetas</button></li>
-                    <li><button class="butto-category"><i class="bi bi-hand-index-thumb"></i>Busos</button></li>
-                    <li><button class="butto-category"><i class="bi bi-hand-index-thumb"></i>Camidses</button></li>
-                    <li><a class="button-shoppingCar" href="./shoppingCar.html">
-                        <i class="bi bi-cart-fill"></i>Carrito <span class="cutter">0</span></a></li>
+                    <li>
+                        <a class="button-menu button-return" href="./Index.html">
+                        <i class="bi bi-arrow-return-left"></i>Seguir Comprando.
+                        </a>
+                    </li>
+                    <li>
+                        <a class="button-menu button-shoppingCar active" href="./shoppingCar.html">
+                        <i class="bi bi-cart-fill"></i>Carrito.
+                        </a>
+                    </li>
                 </ul>
             </nav>
             <footer>
@@ -26,39 +32,72 @@
             </footer>
         </aside>
         <main>
-            <h2 class="tittle-major">Todos los Productos.</h2>
+            <h2 class="tittle-major">Carrito de Compras.</h2>
             <div class="container-products">
-                <div class="product">
-                    <img class="product-image" src="./e-commerce-desde-cero/archivos-iniciales/img/abrigos/01.jpg" alt="">
-                    <div class="prodcut-details">
-                        <h3 class="tittle-product">Abrigos 01</h3>
-                        <p class="product-price">$ 1000</p>
-                        <button class="product-add">Agregar</button>
+                <p class="empty-cart">Tú Carrito se encuentra vacío. <i class="bi bi-emoji-frown"></i></p>
+                <div class="products-Cart">
+
+                    <div class="product-cart">
+                        <img src="./e-commerce-desde-cero/archivos-iniciales/img/abrigos/01.jpg" alt="">
+                        <div class="product-Cart-Tittle">
+                            <small>Titulo.</small>
+                            <h3>Abrigo 01</h3>
+                        </div>
+                        <div class="product-Cart-amount">
+                            <small>Cantidad</small>
+                            <p>1</p>
+                        </div>
+                        <div class="product-Cart-Price">
+                            <small>Precio</small>
+                            <p>$ 1000</p>
+                        </div>
+                        <div class="product-Cart-Subtotal">
+                            <small>SubTotal</small>
+                            <p>$ 1000</p>
+                        </div>
+                        <button class="product-Cart-Eliminate"><i class="bi bi-trash-fill"></i></button>
                     </div>
-                </div><div class="product">
-                    <img class="product-image" src="./e-commerce-desde-cero/archivos-iniciales/img/abrigos/02.jpg" alt="">
-                    <div class="prodcut-details">
-                        <h3 class="tittle-product">Abrigos 02</h3>
-                        <p class="product-price">$ 1000</p>
-                        <button class="product-add">Agregar</button>
+
+                    <div class="product-cart">
+                        <img src="./e-commerce-desde-cero/archivos-iniciales/img/abrigos/01.jpg" alt="">
+                        <div class="product-Cart-Tittle">
+                            <small>Titulo.</small>
+                            <h3>Abrigo 02</h3>
+                        </div>
+                        <div class="product-Cart-amount">
+                            <small>Cantidad</small>
+                            <p>3</p>
+                        </div>
+                        <div class="product-Cart-Price">
+                            <small>Precio</small>
+                            <p>$ 1000</p>
+                        </div>
+                        <div class="product-Cart-Subtotal">
+                            <small>SubTotal</small>
+                            <p>$ 3000</p>
+                        </div>
+                        <button class="product-Cart-Eliminate"><i class="bi bi-trash-fill"></i></button>
                     </div>
-                </div><div class="product">
-                    <img class="product-image" src="./e-commerce-desde-cero/archivos-iniciales/img/abrigos/03.jpg" alt="">
-                    <div class="prodcut-details">
-                        <h3 class="tittle-product">Abrigos 03</h3>
-                        <p class="product-price">$ 1000</p>
-                        <button class="product-add">Agregar</button>
+
+                </div> 
+                <div class="cart-actions">
+
+                    <div class="cart-actions-left">
+                        <button class="cart-empty">VACIAR CARRITO</button>
                     </div>
-                </div><div class="product">
-                    <img class="product-image" src="./e-commerce-desde-cero/archivos-iniciales/img/abrigos/04.jpg" alt="">
-                    <div class="prodcut-details">
-                        <h3 class="tittle-product">Abrigos 04</h3>
-                        <p class="product-price">$ 1000</p>
-                        <button class="product-add">Agregar</button>
+
+                    <div class="cart-actions-right">
+                        <div class="cart-actions-total">
+                            <p>Total :</p>
+                            <p id="total">$ 3000</p>
+                        </div>
+                        <button class="cart-actions-buy">Comprar Ahora!</button>
                     </div>
-                </div>
+                    
+                </div>               
             </div>
         </main>
     </div>
 </body>
+<script src="./js/main.js"></script>
 </html>
