--- a/Reto N°3/Index.html
+++ b/Reto N°3/Index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>General Shop</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./Style.css">
 </head>
 <body>
     <div class="container">
@@ -15,7 +15,7 @@
                 <h1 class="logo1">Logo1</h1>
             </header>
             <nav>
-                <ul>
+                <ul class="menu">
                     <li><button class="button-menu butto-category active"><i class="bi bi-hand-index-thumb-fill"></i>Tendencias</button></li>
 
                     <li><button class="button-menu butto-category"><i class="bi bi-hand-index-thumb"></i>Camisetas</button></li>
@@ -37,28 +37,28 @@
             <div class="container-products">
                 <div class="product">
                     <img class="product-image" src="./e-commerce-desde-cero/archivos-iniciales/img/abrigos/01.jpg" alt="">
-                    <div class="prodcut-details">
+                    <div class="product-details">
                         <h3 class="tittle-product">Abrigos 01</h3>
                         <p class="product-price">$ 1000</p>
                         <button class="product-add">Agregar</button>
                     </div>
                 </div><div class="product">
                     <img class="product-image" src="./e-commerce-desde-cero/archivos-iniciales/img/abrigos/02.jpg" alt="">
-                    <div class="prodcut-details">
+                    <div class="product-details">
                         <h3 class="tittle-product">Abrigos 02</h3>
                         <p class="product-price">$ 1000</p>
                         <button class="product-add">Agregar</button>
                     </div>
                 </div><div class="product">
                     <img class="product-image" src="./e-commerce-desde-cero/archivos-iniciales/img/abrigos/03.jpg" alt="">
-                    <div class="prodcut-details">
+                    <div class="product-details">
                         <h3 class="tittle-product">Abrigos 03</h3>
                         <p class="product-price">$ 1000</p>
                         <button class="product-add">Agregar</button>
                     </div>
                 </div><div class="product">
                     <img class="product-image" src="./e-commerce-desde-cero/archivos-iniciales/img/abrigos/04.jpg" alt="">
-                    <div class="prodcut-details">
+                    <div class="product-details">
                         <h3 class="tittle-product">Abrigos 04</h3>
                         <p class="product-price">$ 1000</p>
                         <button class="product-add">Agregar</button>
