--- a/Reto N°3/shoppingCar.html
+++ b/Reto N°3/shoppingCar.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrito-General Shop</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./Style.css">
 </head>
 <body>
     <div class="container">
         <aside>
             <header>
-                <h1 class="logo1">Logo1</h1>
+                <h1 class="logo1">General Shop</h1>
             </header>
             <nav>
                 <ul>
@@ -35,10 +35,11 @@
             <h2 class="tittle-major">Carrito de Compras.</h2>
             <div class="container-products">
                 <p class="empty-cart">Tú Carrito se encuentra vacío. <i class="bi bi-emoji-frown"></i></p>
+
                 <div class="products-Cart">
 
                     <div class="product-cart">
-                        <img src="./e-commerce-desde-cero/archivos-iniciales/img/abrigos/01.jpg" alt="">
+                        <img class="product-Cart-Image" src="./e-commerce-desde-cero/archivos-iniciales/img/abrigos/01.jpg" alt="">
                         <div class="product-Cart-Tittle">
                             <small>Titulo.</small>
                             <h3>Abrigo 01</h3>
@@ -59,7 +60,7 @@
                     </div>
 
                     <div class="product-cart">
-                        <img src="./e-commerce-desde-cero/archivos-iniciales/img/abrigos/01.jpg" alt="">
+                        <img class="product-Cart-Image" src="./e-commerce-desde-cero/archivos-iniciales/img/abrigos/01.jpg" alt="">
                         <div class="product-Cart-Tittle">
                             <small>Titulo.</small>
                             <h3>Abrigo 02</h3>
